Working on Level 2
- Added new character
- Created new C++ class
- New Shooter BP_Class
- Created new level
- Added new BP_Gamemode
- Started implemeneting character controller
- Created input mappings / bindnings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,11 +2,6 @@
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Scenes/TokyoNightScene.TokyoNightScene
-GameDefaultMap=/Game/Scenes/TokyoNightScene.TokyoNightScene
-GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -16,6 +11,21 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Scenes/Sandbox.Sandbox
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Scenes/TokyoNightScene.TokyoNightScene
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_ShooterGameMode.BP_ShooterGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
